Variuos fixes for the PR 48
 The subhead 'Portfolio Permissions' is too big
  The 'Send Invitation' button is too narrow
  'Close' button should read 'Cancel'
remove trashcan and add 'x' on the outside of it.

AT-6380

--- a/src/sass/components/_permissions_modal.scss
+++ b/src/sass/components/_permissions_modal.scss
@@ -96,7 +96,7 @@
       position: absolute;
       display: block;
       top: 0;
-      right: -5px;
+      right: -55px;
       padding: 0;
       &.theme--light.v-btn.v-btn--has-bg {
         background-color: transparent;
